[metadata]
name = tno.mpc.encryption_schemes.shamir
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Implementation of Shamir secret sharing
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    encryption schemes
    distributed
    shamir
    cryptosystem
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.encryption_schemes.shamir/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/encryption_schemes/shamir/1.1.0
    Source Code = https://github.com/TNO-MPC/encryption_schemes.shamir
version = attr: tno.mpc.encryption_schemes.shamir.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.encryption_schemes.shamir
    tno.mpc.encryption_schemes.shamir.test
zip_safe = False
install_requires =
    sympy
    tno.mpc.encryption_schemes.utils>=0.8.0
namespace_packages =
    tno
    tno.mpc
    tno.mpc.encryption_schemes
include_package_data = True

[options.package_data]
tno.mpc.encryption_schemes.shamir = py.typed

[options.extras_require]
gmpy =
    tno.mpc.encryption_schemes.utils[gmpy]
tests =
    pytest
    pytest-asyncio
